chore(sdk): enforce java 8 compatibility